# LuaBridge

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  TODO.md  build.sh  design.md  run_build.sh  todo.txt
CMakeModules/: clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  doxygen.cmake  googletestmock.cmake
benchmark/: CMakeLists.txt  benchmark.cpp  luascript.lua
cmake/: clang-format.cmake  clang-tidy.cmake  codecoverage.cmake  cppcheck.cmake
include/: LuaArray.hpp  LuaBridge.hpp  LuaBz.hpp  LuaContainer.hpp  LuaError.hpp  LuaFunction.hpp  LuaHelpers.hpp  LuaScript.hpp  LuaStack.hpp  LuaTable.hpp  LuaValue.hpp  callable_traits.hpp  can_represent_value.hpp  lua_exception.hpp  lua_script.hpp  lua_value_ref.hpp  luabz.hpp  tuple_utils.hpp
include/core/: LuaError.hpp  LuaFunction.hpp  LuaScript.hpp  LuaStack.hpp  LuaTable.hpp  lua_error.hpp  lua_exception.hpp  lua_function.hpp  lua_function.tpp  lua_script.hpp  lua_script.tpp  lua_stack.hpp  lua_stack.tpp  lua_state_factory.hpp  lua_table.hpp  lua_table.tpp  lua_type.hpp  lua_types.hpp  lua_val_expr.hpp  lua_value_ref.hpp
include/detail/: lua_error.hpp  lua_state_factory.hpp  lua_value.hpp
include/luabz/: error.hpp  interface.hpp  luabz_exception.hpp  script.hpp  state.hpp  value.hpp  var_loader.hpp  var_ref.hpp
reports/cppcheck/: 0.html  1.html  index.html  stats.html
src/: CMakeLists.txt  LuaScript.cpp  LuaStack.cpp  LuaValue.cpp  lua_exception.cpp  lua_script.cpp  lua_value_ref.cpp  main.cpp
src/core/: CMakeLists.txt  LuaScript.cpp  LuaStack.cpp  LuaTable.cpp  lua_error.cpp  lua_exception.cpp  lua_script.cpp  lua_stack.cpp  lua_table.cpp  lua_val_expr.cpp  lua_value_ref.cpp
src/core/tests/: LuaScript_Test.cpp  lua_script_test.cpp  luascript_dep.lua  luascript_test.lua
src/detail/: lua_error.cpp  lua_error.hpp  lua_state_factory.cpp
tests/: CMakeLists.txt
tests/core/: lua_script_Test.cpp  lua_script_UserType.cpp  lua_script_test.cpp  lua_test_helpers.hpp  lua_value_FunctionTest.cpp  lua_value_GetTest.cpp  lua_value_OperatorTest.cpp  lua_value_SetTest.cpp  lua_value_TableTest.cpp  lua_value_Test.cpp  luascript_dep.lua  luascript_dep2.lua
tests/detail/: lua_helper_Test.cpp  lua_state_factory_Test.cpp
tests/lua_scripts/: luascript_test.lua  luascript_test2.lua
tests/scripts/: luascript_test.lua
