cmake_minimum_required(VERSION 3.6)
set (PROJECT_NAME luabz)
project(${PROJECT_NAME})
set (PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

file (GLOB PROJECT_PART_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp")
#TODO: If there is no files in the glob don't add_library,and also link the test sources with gtest only
add_library(${PROJECT_NAME} ${PROJECT_PART_SOURCES})
if(ENABLE_TEST AND EXISTS ${PROJECT_SOURCE_DIR}/tests)     
    set (PROJECT_TEST_NAME luabz_test)
    file (GLOB PROJECT_PART_TEST_SOURCES "${PROJECT_SOURCE_DIR}/tests/*.cpp")
    if(NOT ${PROJECT_PART_TEST_SOURCES})
        add_executable(${PROJECT_TEST_NAME} ${PROJECT_PART_TEST_SOURCES})
        target_link_libraries(${PROJECT_TEST_NAME} ${PROJECT_NAME} libgtest libgtest_main libgmock)
    endif()
endif()